add feature importances

--- a/000-quick-lookup.ipynb
+++ b/000-quick-lookup.ipynb
@@ -34,11 +34,11 @@
    },
    "outputs": [],
    "source": [
-    "train = pd.read_csv(\"../data/sales_train_v2.csv\")\n",
-    "test = pd.read_csv(\"../data/test.csv\")\n",
-    "items = pd.read_csv(\"../data/items.csv\")\n",
-    "item_cats = pd.read_csv(\"../data/item_categories.csv\")\n",
-    "shops = pd.read_csv(\"../data/shops.csv\")"
+    "train = pd.read_csv(\"data/sales_train_v2.csv\")\n",
+    "test = pd.read_csv(\"data/test.csv\")\n",
+    "items = pd.read_csv(\"data/items.csv\")\n",
+    "item_cats = pd.read_csv(\"data/item_categories.csv\")\n",
+    "shops = pd.read_csv(\"data/shops.csv\")"
    ]
   },
   {
@@ -561,7 +561,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train[\"datetime\"] = pd.to_datetime(train.date, format=\"%d.%m.%Y\")"
@@ -710,7 +712,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train[\"year\"] = train.datetime.apply(get_year)\n",
@@ -721,7 +725,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = train.sort_values(\"datetime\")"
@@ -1562,7 +1568,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# NANs\n",
